crates/fig-parser/tests/snapshots/integration_tests__literals__strings_interpolated_field.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Point
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: I32
          visibility: Default
          annotations: []
        - name: y
          ty: I32
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: show_point
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: p
            ty:
              Path:
                path:
                  segments:
                    - Point
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: msg
              ty: ~
              value:
                InterpolatedString:
                  - Text: Point(
                  - Text: "{p.x}"
                  - Text: ", "
                  - Text: "{p.y}"
                  - Text: )
          - Pass
